# py-tree-manager

./: .gitignore  README.md  SETUP.md  main.py  pyproject.toml  pytest.ini
.claude/: CLAUDE.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pii-check.yml  pr-build.yml  release.yml
.pipelines/: README.md  local-runner-schema.yaml  update.bat
.pipelines/ci/: bump-version.ps1  pii-check.ps1  rename-artifact.ps1
docs/: RELEASE.md  architecture.md
docs/decisions/: ADR-001-shortcut-creation-unicode-fix.md  ADR-002-ui-framework-evaluation.md  ADR-003-drzewo-encoding-and-algorithm.md  ADR-004-rody-encoding-and-algorithm.md  ADR-005-mode-background-palette-refresh.md  ADR-006-logging-architecture-decorator-and-exception-hooks.md  ADR-007-severity-model-and-log-line-format.md  ADR-008-email-transport-and-offline-queue.md  ADR-009-red-top-of-app-button-ux.md  ADR-010-runtime-data-consolidation-under-root-pytreemanager.md  ADR-011-context-menu-state-machine-and-draft-update.md  ADR-012-ci-pipeline-windows-self-hosted-runner.md  ADR-013-version-embedding-and-update-detection.md  ADR-014-self-replace-updater.md  ADR-015-github-actions-migration.md  ADR-016-lineage-folders-surname-grouped.md  ADR-017-picker-exclusion-lifecycle.md  ADR-018-installer-fixed-location-and-update-observability.md  ADR-019-folder-selection-guards.md  ADR-020-date-prefix-markers.md  ADR-021-lineage-drzewo-generation-ordering.md  INDEX.md
installer/: py-tree-manager.iss
src/constants/: constants.py  people_data.py  (+1 more)
(+42 files in other folders)
