[project]
name = "py-tree-manager"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "pywin32==311",
    "wxPython==4.2.4",
    "packaging>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pyinstaller>=6.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
